--- a/ai-plag-checker/package.json
+++ b/ai-plag-checker/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ai-plag-checker",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,14 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@langchain/langgraph": "^1.0.3",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "@xenova/transformers": "^2.17.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "langchain": "^1.1.2",
     "mammoth": "^1.11.0",
     "multer": "^2.0.2",
     "openai": "^6.9.1",
-    "pdf-parse": "^2.4.5"
+    "pdf-parse": "^2.4.5",
+    "zod": "^4.2.1"
   },
-  "devDependencies": {},
   "description": ""
 }
